--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_comments_view">Comments</string>
+    <string name="title_activity_posts_view">Posts</string>
     <string name="comments_view">Comments1</string>
     <string name="posts_list">posts</string>
 
