Added major views and fragments, menubars and icons

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <!-- Application String -->
     <string name="app_name">Classified!</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+
+    <!-- Activity Title Strings -->
     <string name="title_activity_comments_view">Comments</string>
-    <string name="title_activity_posts_view">Posts</string>
-    <string name="comments_view">Comments1</string>
-    <string name="posts_list">posts</string>
-
-     <string name="back">back</string>
-
+    <string name="title_activity_posts_view">Post</string>
     <string name="title_activity_demo_post">DemoPost</string>
     <string name="title_activity_demo_keys">DemoKeys</string>
     <string name="title_activity_demo_xkeys">DemoXKeys</string>
+    <string name="title_activity_classified_chat_rooms">Classified Chat Rooms</string>
+    <string name="title_activity_create_chat_room">Create Chat Room</string>
+    <string name="title_activity_chat_room_detail">Chat Room</string>
 
+    <!-- Generic Strings -->
+    <string name="blank" />
+    <string name="name">Name</string>
+    <string name="desc">Description</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+
+    <!-- Common Strings -->
+    <string name="posts_list">Posts</string>
+    <string name="create_chat_room">Create Chat Room</string>
+    <string name="show_chat_room">Show Chat Room</string>
+    <string name="join_chat_room">Join Chat Room</string>
+    <string name="save_chat_room">Save Chat Room</string>
+    <string name="view_users">View Users</string>
+    <string name="add_user">Add User</string>
+    <string name="view_post">View Post</string>
+    <string name="add_post">Add Post</string>
+    <string name="add_comment">Add Comment</string>
 
 </resources>
